# ScrAioStudizba

./: .env.example  .gitignore  README.md  README.ru.md  index.html  pyproject.toml
code/: excel_functions.py  institutions_and_departments.json  json_functions.py  main.py
