[project]
name = "scraiostudizba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "aiohttp-proxy>=0.1.2",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "httplib2>=0.22.0",
    "openpyxl>=3.1.5",
    "tqdm>=4.67.1",
    "transliterate>=1.10.2",
]
